--- a/index.html
+++ b/index.html
@@ -77,56 +77,56 @@
         <div class="box1 box">
             <div class="box-content">
                 <h2>Clothes</h2>
-                <div class="box-image" style="background-image: url('/assets/box1_image.jpg')"></div>
+                <div class="box-image" style="background-image: url('./assets/box1_image.jpg')"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="box2 box">
             <div class="box-content">
                 <h2>Health & Personal Care</h2>
-                <div class="box-image" style="background-image: url('/assets/box2_image.jpg')"></div>
+                <div class="box-image" style="background-image: url('./assets/box2_image.jpg')"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="box3 box">
             <div class="box-content">
                 <h2>Furniture</h2>
-                <div class="box-image" style="background-image: url('/assets/box3_image.jpg')"></div>
+                <div class="box-image" style="background-image: url('./assets/box3_image.jpg')"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="box4 box">
             <div class="box-content">
                 <h2>Electronics</h2>
-                <div class="box-image" style="background-image: url('/assets/box4_image.jpg')"></div>
+                <div class="box-image" style="background-image: url('./assets/box4_image.jpg')"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="box5 box">
             <div class="box-content">
                 <h2>Beauty Picks</h2>
-                <div class="box-image" style="background-image: url('/assets/box5_image.jpg')"></div>
+                <div class="box-image" style="background-image: url('./assets/box5_image.jpg')"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="box6 box">
             <div class="box-content">
                 <h2>New Arrival in Toys</h2>
-                <div class="box-image" style="background-image: url('/assets/box6_image.jpg')"></div>
+                <div class="box-image" style="background-image: url('./assets/box6_image.jpg')"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="box7 box">
             <div class="box-content">
                 <h2>Pet Care</h2>
-                <div class="box-image" style="background-image: url('/assets/box7_image.jpg')"></div>
+                <div class="box-image" style="background-image: url('./assets/box7_image.jpg')"></div>
                 <p>See more</p>
             </div>
         </div>
         <div class="box8 box">
             <div class="box-content">
                 <h2>Discover Fashion Trends</h2>
-                <div class="box-image" style="background-image: url('/assets/box8_image.jpg')"></div>
+                <div class="box-image" style="background-image: url('./assets/box8_image.jpg')"></div>
                 <p>See more</p>
             </div>
         </div>
